--- a/scss/_global/_body.scss
+++ b/scss/_global/_body.scss
@@ -14,4 +14,6 @@ body {
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     font-family: $tittle-font;
+    overflow-x: hidden;
 }
+
